crates/automapper-generator/tests/snapshots/mapper_gen_tests__utilmd_geschaeftspartner_mapper_fv2510_rs.snap
---
source: crates/automapper-generator/tests/mapper_gen_tests.rs
expression: content
---
// <auto-generated>
//     This code was generated by automapper-generator.
//     Source: UTILMD Strom S2.1
//
//     Changes to this file may be overwritten when regenerated.
// </auto-generated>

use automapper_core::traits::{SegmentHandler, Builder, EntityWriter, Mapper};
use automapper_core::context::TransactionContext;
use automapper_core::writer::EdifactSegmentWriter;
use automapper_core::FormatVersion;
use edifact_types::RawSegment;

/// Mapper for Geschaeftspartner in FV2510.
/// Segment group: SG2
pub struct GeschaeftspartnerMapperV2510 {
    builder: GeschaeftspartnerBuilder,
}

impl Default for GeschaeftspartnerMapperV2510 {
    fn default() -> Self {
        Self { builder: GeschaeftspartnerBuilder::default() }
    }
}

impl SegmentHandler for GeschaeftspartnerMapperV2510 {
    fn can_handle(&self, segment: &RawSegment) -> bool {
        matches!(segment.id,
            "NAD"
        )
    }

    fn handle(&mut self, segment: &RawSegment, ctx: &mut TransactionContext) {
        // TODO: Implement Geschaeftspartner segment handling
        // NAD: parse and accumulate in builder
    }
}

impl EntityWriter for GeschaeftspartnerMapperV2510 {
    fn write(&self, writer: &mut EdifactSegmentWriter, ctx: &TransactionContext) {
        // TODO: Implement Geschaeftspartner EDIFACT writing
    }
}

impl Mapper for GeschaeftspartnerMapperV2510 {
    fn format_version(&self) -> FormatVersion {
        FormatVersion::FV2510
    }
}

/// Builder for Geschaeftspartner domain objects.
#[derive(Default)]
pub struct GeschaeftspartnerBuilder {
    // TODO: Add fields for geschaeftspartner state accumulation
}

impl Builder<()> for GeschaeftspartnerBuilder {
    fn is_empty(&self) -> bool {
        true // TODO: Check accumulated state
    }

    fn build(&mut self) -> () {
        // TODO: Build Geschaeftspartner domain object
    }

    fn reset(&mut self) {
        *self = Self::default();
    }
}
