crates/automapper-generator/tests/snapshots/mapper_gen_tests__utilmd_mappers_fv2510_mod_rs.snap
---
source: crates/automapper-generator/tests/mapper_gen_tests.rs
expression: content
---
// <auto-generated>
//     Mapper modules for UTILMD FV2510
// </auto-generated>

pub mod utilmd_prozessdaten_mapper_fv2510;
pub mod utilmd_geschaeftspartner_mapper_fv2510;
