crates/automapper-generator/tests/snapshots/mapper_gen_tests__utilmd_prozessdaten_mapper_fv2510_rs.snap
---
source: crates/automapper-generator/tests/mapper_gen_tests.rs
expression: content
---
// <auto-generated>
//     This code was generated by automapper-generator.
//     Source: UTILMD Strom S2.1
//
//     Changes to this file may be overwritten when regenerated.
// </auto-generated>

use automapper_core::traits::{SegmentHandler, Builder, EntityWriter, Mapper};
use automapper_core::context::TransactionContext;
use automapper_core::writer::EdifactSegmentWriter;
use automapper_core::FormatVersion;
use edifact_types::RawSegment;

/// Mapper for Prozessdaten in FV2510.
pub struct ProzessdatenMapperV2510 {
    builder: ProzessdatenBuilder,
}

impl Default for ProzessdatenMapperV2510 {
    fn default() -> Self {
        Self { builder: ProzessdatenBuilder::default() }
    }
}

impl SegmentHandler for ProzessdatenMapperV2510 {
    fn can_handle(&self, segment: &RawSegment) -> bool {
        matches!(segment.id,
            "UNH" |
            "BGM"
        )
    }

    fn handle(&mut self, segment: &RawSegment, ctx: &mut TransactionContext) {
        // TODO: Implement Prozessdaten segment handling
        // UNH: parse and accumulate in builder
        // BGM: parse and accumulate in builder
    }
}

impl EntityWriter for ProzessdatenMapperV2510 {
    fn write(&self, writer: &mut EdifactSegmentWriter, ctx: &TransactionContext) {
        // TODO: Implement Prozessdaten EDIFACT writing
    }
}

impl Mapper for ProzessdatenMapperV2510 {
    fn format_version(&self) -> FormatVersion {
        FormatVersion::FV2510
    }
}

/// Builder for Prozessdaten domain objects.
#[derive(Default)]
pub struct ProzessdatenBuilder {
    // TODO: Add fields for prozessdaten state accumulation
}

impl Builder<()> for ProzessdatenBuilder {
    fn is_empty(&self) -> bool {
        true // TODO: Check accumulated state
    }

    fn build(&mut self) -> () {
        // TODO: Build Prozessdaten domain object
    }

    fn reset(&mut self) {
        *self = Self::default();
    }
}
